--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <link rel="icon" href="../src/assets/static/mariposa.jpg" />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Iso&family=Titillium+Web:wght@600&display=swap" rel="stylesheet">
+    <!-- view -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="webmanifest" href="%PUBLIC_URL%/manifest.json" /> 
-    <title>XV de Ariana</title>
+    <title>Mi cumpleaños</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body>
